[AMQ-8354] Add an intermediate replication queue. Make the main replication queue non-persistent. Add logic for adding and checking sequences on both sides.